--- a/todolist/Sources/Base.lproj/LaunchScreen.storyboard
+++ b/todolist/Sources/Base.lproj/LaunchScreen.storyboard
@@ -17,24 +17,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon" translatesAutoresizingMaskIntoConstraints="NO" id="QCC-bf-g6G">
-                                <rect key="frame" x="40" y="363.66666666666669" width="351" height="230.00000000000006"/>
+                                <rect key="frame" x="136" y="412.66666666666669" width="158" height="132.00000000000006"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="230" id="72X-hz-0cX"/>
+                                    <constraint firstAttribute="width" constant="158" id="4Az-O0-i95"/>
+                                    <constraint firstAttribute="height" constant="132" id="7Tn-OT-sVk"/>
                                 </constraints>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small" weight="ultraLight"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QCC-bf-g6G" secondAttribute="trailing" constant="39" id="8Mt-cu-U9R"/>
-                            <constraint firstItem="QCC-bf-g6G" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="QQD-nf-raH"/>
-                            <constraint firstItem="QCC-bf-g6G" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="vNG-EP-IzI"/>
+                            <constraint firstItem="QCC-bf-g6G" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="EL8-Lw-tpU"/>
+                            <constraint firstItem="QCC-bf-g6G" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="Zov-gF-7Sd"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.307692307692307" y="374.64454976303318"/>
+            <point key="canvasLocation" x="51.627906976744185" y="374.03433476394855"/>
         </scene>
     </scenes>
     <resources>
