--- a/todolist/Sources/Base.lproj/Main.storyboard
+++ b/todolist/Sources/Base.lproj/Main.storyboard
@@ -34,6 +34,9 @@
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GOJ-3N-Ulp">
                                 <rect key="frame" x="304" y="95" width="55" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="55" id="LcG-fb-V8m"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Add"/>
                                 <connections>
@@ -57,8 +60,8 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OGf-yz-Pvi">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="54"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Todo label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LMK-jP-6ys">
-                                                            <rect key="frame" x="16" y="0.0" width="71" height="54"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Todo label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LMK-jP-6ys">
+                                                            <rect key="frame" x="16" y="0.0" width="262" height="54"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -99,6 +102,7 @@
                                                         <constraint firstAttribute="trailing" secondItem="5CY-3R-TAS" secondAttribute="trailing" constant="13" id="A30-jC-Y4P"/>
                                                         <constraint firstAttribute="height" constant="54" id="FSP-5J-ctT"/>
                                                         <constraint firstItem="LMK-jP-6ys" firstAttribute="leading" secondItem="OGf-yz-Pvi" secondAttribute="leading" constant="16" id="lpo-Km-msV"/>
+                                                        <constraint firstItem="TaD-wl-0aM" firstAttribute="leading" secondItem="LMK-jP-6ys" secondAttribute="trailing" constant="6" id="rIY-Kf-E7S"/>
                                                         <constraint firstItem="LMK-jP-6ys" firstAttribute="top" secondItem="OGf-yz-Pvi" secondAttribute="top" id="vah-nL-6JI"/>
                                                         <constraint firstItem="5CY-3R-TAS" firstAttribute="centerY" secondItem="OGf-yz-Pvi" secondAttribute="centerY" id="xTS-E0-3My"/>
                                                         <constraint firstItem="TaD-wl-0aM" firstAttribute="centerY" secondItem="OGf-yz-Pvi" secondAttribute="centerY" id="xrT-gO-Tl6"/>
@@ -114,6 +118,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="removeButton" destination="5CY-3R-TAS" id="fci-A8-Hno"/>
                                             <outlet property="todoContentLabel" destination="LMK-jP-6ys" id="5Zg-vE-Ge5"/>
                                         </connections>
                                     </tableViewCell>
