--- a/todolist/Sources/Base.lproj/LaunchScreen.storyboard
+++ b/todolist/Sources/Base.lproj/LaunchScreen.storyboard
@@ -16,20 +16,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon" translatesAutoresizingMaskIntoConstraints="NO" id="QCC-bf-g6G">
-                                <rect key="frame" x="136" y="412.66666666666669" width="158" height="132.00000000000006"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Todolist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s4G-3u-gdl">
+                                <rect key="frame" x="122" y="449" width="186" height="59"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="158" id="4Az-O0-i95"/>
-                                    <constraint firstAttribute="height" constant="132" id="7Tn-OT-sVk"/>
+                                    <constraint firstAttribute="width" constant="186" id="SQ8-f3-96v"/>
                                 </constraints>
-                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small" weight="ultraLight"/>
-                            </imageView>
+                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="45"/>
+                                <color key="textColor" systemColor="systemCyanColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="QCC-bf-g6G" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="EL8-Lw-tpU"/>
-                            <constraint firstItem="QCC-bf-g6G" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="Zov-gF-7Sd"/>
+                            <constraint firstItem="s4G-3u-gdl" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="h4r-As-M8H"/>
+                            <constraint firstItem="s4G-3u-gdl" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="uvR-Bv-Iz8"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -39,9 +40,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Icon" width="1024" height="1024"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
