--- a/todolist/Sources/Base.lproj/LaunchScreen.storyboard
+++ b/todolist/Sources/Base.lproj/LaunchScreen.storyboard
@@ -19,7 +19,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Todolist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s4G-3u-gdl">
                                 <rect key="frame" x="122" y="449" width="186" height="59"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="186" id="SQ8-f3-96v"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="186" id="SQ8-f3-96v"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="45"/>
                                 <color key="textColor" systemColor="systemCyanColor"/>
